验证及我的

--- a/src/style/login.less
+++ b/src/style/login.less
@@ -4,7 +4,6 @@
     padding:@base*20vw;
     .login-reg-box{
         width:100%;
-        height:@base*100vw;
         background: #fff;
         border-radius: 5px;
         .row{
@@ -28,6 +27,9 @@
                 right:5px;
                 top:10px;
                 color:red;
+            }
+            .check{
+                width:@base*200vw;
             }
         }
     }
