--- a/src/style/index.less
+++ b/src/style/index.less
@@ -15,6 +15,15 @@
 @import './template/fourButton.less';
 @import './template/myInfo.less';
 @import './dilivered.less';
+@import './animate.css';
+.ng-enter {
+  transition:0.5s linear all;
+  opacity:0;
+}
+/* The finishing CSS styles for the enter animation */
+.ng-enter-active {
+  opacity:1;
+}
 //已经把根节点的fontSize设置成了屏幕宽度的 1/10，所以可以用一下函数将px换算成rem
 .fs(@px){
     font-size:unit(@px / 37.5,rem);
